Add fonts and new font style demo

--- a/SwiftUIKitDemo/Info.plist
+++ b/SwiftUIKitDemo/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AbrilFatface-Regular.ttf</string>
+		<string>Lobster-Regular.ttf</string>
+		<string>LuckiestGuy-Regular.ttf</string>
+	</array>
 	<key>CFBundleDisplayName</key>
 	<string>SwiftUIKit</string>
 	<key>CFBundleDevelopmentRegion</key>
