--- a/Demo/iOS/Info.plist
+++ b/Demo/iOS/Info.plist
@@ -46,5 +46,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AbrilFatface-Regular.ttf</string>
+		<string>Lobster-Regular.ttf</string>
+		<string>LuckiestGuy-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
