--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -6,7 +6,7 @@ name: DocC Runner
 
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -24,34 +24,23 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: macos-13
+    runs-on: macos-15
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - id: pages
         name: Setup Pages
         uses: actions/configure-pages@v4
-      - name: Select Xcode 15.1
+      - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '15.1.0'
+          xcode-version: '16.0'
       - name: Build DocC
-        run: |
-          swift package resolve;
-          
-          xcodebuild docbuild -scheme SwiftUIKit -derivedDataPath /tmp/docbuild -destination 'generic/platform=iOS';
-          
-          $(xcrun --find docc) process-archive \
-            transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-iphoneos/SwiftUIKit.doccarchive \
-            --output-path docs \
-            --hosting-base-path 'SwiftUIKit';
-            
-          echo "<script>window.location.href += \"/documentation/swiftuikit\"</script>" > docs/index.html;
-          
+        run: bash scripts/docc.sh ${{ github.event.repository.name }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'docs'
+          path: '.build/docs'
       - id: deployment
         name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
