--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-# SPM defaults
 .DS_Store
 /.build
 /Packages
 .swiftpm/
-
-# Documentation
-Docs
-documentation
-downloads
-videos
-
-# Fastlane
-Fastlane/report.xml
-Fastlane/Preview.html
-Fastlane/screenshots
-Fastlane/test_output
-Fastlane/README.md
+xcuserdata/
+DerivedData/
