--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           xcode-version: '16.0'
       - name: Build DocC
-        run: bash scripts/docc.sh ${{ github.event.repository.name }}
+        run: bash scripts/docc.sh ${{ github.event.repository.name }} iOS
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
