--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '16.0'
+          xcode-version: latest-stable
       - name: Build DocC
         run: bash scripts/docc.sh ${{ github.event.repository.name }} iOS
       - name: Upload artifact
